--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Suporte T>I Profiddional</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title> Suporte TI Profiddional</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 
     <header class="header">
-        <h1> Suporte e Manutenção de T.I</h1>
-        <p>Soluções rapidas e confiaveis para sua empresa</p>
+        <nav class="nav">
+            <h1>Suporte T.I</h1>
+            <ul>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
 
+        <div class="hero">
+            <h1> Suporte e Manutenção de T.I</h1>
+            <p>Soluções rapidas e confiaveis para sua empresa</p>
+        </div>
     </header>
 
 
     <main>
-        <section class="serices">
+        <section  id="services" class="services">
             <h2>Serviços</h2>
             <ul>
                 <li>Suporte técnico</li>
@@ -30,7 +39,7 @@
         </section>
 
 
-        <section class="contact">
+        <section id="contato" class="contact">
             <h2>Contato</h2>
             <form>
                 <label>Nome
@@ -52,9 +61,9 @@
         </section>
     </main>
 
-     
+
     <foter>
-        <p>© Suporte TI - 2026  </p>
+        <p>© Suporte TI - 2026 </p>
     </foter>
 </body>
 
