Refatora HTML e CSS e corrige erros de layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pr-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Suporte TI Profiddional</title>
-    <link rel="stylesheet" href="style.css">
+    <title> Suporte TI Profissional</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -21,25 +21,25 @@
         </nav>
 
         <div class="hero">
-            <h1> Suporte e Manutenção de T.I</h1>
-            <p>Soluções rapidas e confiaveis para sua empresa</p>
+            <h2> Suporte e Manutenção de T.I</h2>
+            <p>Soluções rápidas e confiáveis para sua empresa</p>
         </div>
     </header>
 
 
     <main>
-        <section  id="services" class="services">
+        <section  id="servicos" class="servicos">
             <h2>Serviços</h2>
             <ul>
                 <li>Suporte técnico</li>
-                <li>anutenção de Computadores</li>
-                <li>Redes e infraestrutera</li>
+                <li>Manutenção de Computadores</li>
+                <li>Redes e infraestrutura</li>
                 <li>Consultoria em T.I</li>
             </ul>
         </section>
 
 
-        <section id="contato" class="contact">
+        <section id="contato" class="contato">
             <h2>Contato</h2>
             <form>
                 <label>Nome
@@ -48,7 +48,7 @@
 
                 <label>E-mail
 
-                    <input type="E-mail" required>
+                    <input type="email" required>
 
                 </label>
 
@@ -62,9 +62,9 @@
     </main>
 
 
-    <foter>
+    <footer>
         <p>© Suporte TI - 2026 </p>
-    </foter>
+    </footer>
 </body>
 
 </html>
